--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
 		"webpack-dev-server": "^4.11.1"
 	},
 	"dependencies": {
+		"daisyui": "^2.51.0",
+		"lesca-number": "^1.5.1",
 		"lesca-use-tween": "^2.4.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
