--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
 	},
 	"dependencies": {
 		"daisyui": "^2.51.0",
+		"lesca-click": "^4.3.2",
 		"lesca-number": "^1.5.1",
 		"lesca-use-tween": "^2.4.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.8.1"
+		"react-router-dom": "^6.8.1",
+		"scrollmagic": "^2.0.8"
 	}
 }
