--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.7.3",
 		"dotenv-webpack": "^8.0.1",
-		"eslint": "^8.34.0",
+		"eslint": "^8.35.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
@@ -37,7 +37,7 @@
 		"postcss": "^8.4.21",
 		"postcss-loader": "^7.0.2",
 		"postcss-preset-env": "^8.0.1",
-		"prettier-plugin-tailwindcss": "^0.2.3",
+		"prettier-plugin-tailwindcss": "^0.2.4",
 		"style-loader": "^3.3.1",
 		"tailwindcss": "^3.2.7",
 		"webpack": "^5.75.0",
@@ -45,13 +45,12 @@
 		"webpack-dev-server": "^4.11.1"
 	},
 	"dependencies": {
-		"daisyui": "^2.51.0",
+		"daisyui": "^2.51.3",
 		"lesca-click": "^4.3.2",
 		"lesca-number": "^1.5.1",
 		"lesca-use-tween": "^2.4.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.8.1",
-		"scrollmagic": "^2.0.8"
+		"react-router-dom": "^6.8.2"
 	}
 }
