--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.7.3",
 		"dotenv-webpack": "^8.0.1",
-		"eslint": "^8.35.0",
+		"eslint": "^8.36.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
@@ -41,19 +41,21 @@
 		"style-loader": "^3.3.1",
 		"tailwindcss": "^3.2.7",
 		"url-loader": "^4.1.1",
-		"webpack": "^5.75.0",
+		"webpack": "^5.76.1",
 		"webpack-cli": "^5.0.1",
 		"webpack-dev-server": "^4.11.1"
 	},
 	"dependencies": {
+		"bezier-easing": "^2.1.0",
 		"daisyui": "^2.51.3",
 		"lesca-click": "^4.3.2",
+		"lesca-enterframe": "^1.2.2",
 		"lesca-image-onload": "^3.0.1",
 		"lesca-number": "^1.5.1",
-		"lesca-use-tween": "^2.4.4",
+		"lesca-use-tween": "^2.4.6",
 		"lesca-user-agent": "^2.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.8.2"
+		"react-router-dom": "^6.9.0"
 	}
 }
