--- a/package.json
+++ b/package.json
@@ -37,22 +37,23 @@
 		"postcss": "^8.4.21",
 		"postcss-loader": "^7.1.0",
 		"postcss-preset-env": "^8.0.1",
-		"prettier-plugin-tailwindcss": "^0.2.4",
+		"prettier-plugin-tailwindcss": "^0.2.5",
 		"style-loader": "^3.3.2",
 		"tailwindcss": "^3.2.7",
 		"url-loader": "^4.1.1",
 		"webpack": "^5.76.2",
 		"webpack-cli": "^5.0.1",
-		"webpack-dev-server": "^4.12.0"
+		"webpack-dev-server": "^4.13.1"
 	},
 	"dependencies": {
 		"bezier-easing": "^2.1.0",
 		"daisyui": "^2.51.4",
+		"howler": "^2.2.3",
 		"lesca-click": "^4.3.2",
 		"lesca-enterframe": "^1.2.4",
 		"lesca-image-onload": "^3.0.1",
 		"lesca-number": "^1.5.1",
-		"lesca-use-tween": "^2.4.8",
+		"lesca-use-tween": "^2.4.9",
 		"lesca-user-agent": "^2.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
