--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
 		"lesca-user-agent": "^2.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.9.0"
+		"react-router-dom": "^6.9.0",
+		"react-slick": "^0.29.0",
+		"slick-carousel": "^1.8.1"
 	}
 }
